--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,15 @@ h2 {
 p {
     font-size: 18px;
 }
-img {
+
+footer {
+    margin-bottom: 30px;
+}
+
+.img_padrao {
     margin-bottom: 20px;
+    width: 300px;
+}
+.logo {
+    width: 30px;
 }
